# JET_XKCD

./: .pre-commit-config.yaml  DWH_model.md  Makefile  README.md  pyproject.toml
dag/: dag.py
tests/: test_fetch_insert.py
xkcd_dbt_project/xkcd/: dbt_project.yml
xkcd_dbt_project/xkcd/models/example/: dim_comic.sql  fact_comic.sql  schema.yml
xkcd_dbt_project/xkcd/tests/: dim_comic.yml  fact_comic.yml
xkcd_pipelines/: __init__.py  fetch_insert.py
