[tool.poetry]
name = "xkcd_pipeline"
version = "0.1.0"
description = "This pipeline will be fetching, transforming, and loading XKCD comic data."
authors = ["Daniel Ibarbo Betancur <danielibarbo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
